         peripherals/{dck.c,scld.[ch]}: restore loading of DCK files, fix issue
         loading DCK files with uninitialised RAM (patch #3525261 rkd77 and
         Fred).
20120709 ui/gtk/gtkcompat.c: missed adding file from patch #3534181 (thanks,
         rkd77) (Fred).
20120709 ui/gtk/gtkcompat.c: removed duplicate text (Sergio).
20120716 ui/gtk/gtkjoystick.c: joystick type should be aligned vertically (bug
         #3543781) (Sergio).
20120716 machine.c,peripherals/if1.c: show microdrive icon in the status bar
         before the first access (patch #3543783) (Sergio).
20120716 ui/win32/{win32display.c,win32ui.c}: limit screen updates to the
         rectangle bounding the union of the updated section of the screen
         (patch #3544453) (Sergio).
20120903 debugger/{commandl.[lc]},man/fuse.1: add im, iff1 and iff2 setting and
         getting (Alex Badea).
20120903 ui/gtk/debugger.c,ui/win32/debugger.c: use MEMORY_PAGE_SIZE rather than
         the hardcoded 4K value (Alex Badea).
20120928 memory.c,machines/pentagon.c,snapshot.c: read and write all potential
         1024k worth of memory pages from a snap, initialise the Pentagon 1024k
         memory ports from a snapshot and ensure that we respect the paged state
         of the Beta ROM when loading Pentagon 128k/512k/1024k snapshots (ketmar
         and Fred).
20120928 memory.c,machines/pentagon.c,snapshot.c: tweak copyright dates (Fred).
20121003 compat.h,compat/Makefile.am,compat/amiga/{Makefile.am,paths.c},
         compat/linux/{Makefile.am,paths.c},compat/unix/{Makefile.am,paths.c},
         compat/wii/paths.c,compat/win32/paths.c,configure.in,fuse.[ch],
         utils.[ch]: add a compat function for get_next_dir() to accommodate
         platform-specific strategies for locating resources (bug #3571689)
         (Sergio).
20121003 compat/{linux/paths.c,win32/paths.c}: add missing #include <string.h>
         (more from bug #3571689) (Sergio).