@@ -649,9 +649,9 @@ menu_help_about( GtkAction *gtk_action GCC_UNUSED, gpointer data GCC_UNUSED )
   gtk_show_about_dialog( GTK_WINDOW( gtkui_window ),
                          "name", "Fuse",
                          "comments", "The Free Unix Spectrum Emulator",
-                         "copyright", "(c) 1999-2011 Philip Kendall and others.",
+                         "copyright", FUSE_COPYRIGHT,
                          "version", VERSION,
-                         "website", "http://fuse-emulator.sourceforge.net/",
+                         "website", PACKAGE_URL,
                          NULL );
 }
 
